fixed list spacing

--- a/signalbox/static/css/signalbox.css
+++ b/signalbox/static/css/signalbox.css
@@ -1,3 +1,5 @@
+li { line-height:1.2em !important; margin-top:.5em !important;}
+
 .table h4 {margin-top:0;}
 
 .rotate {
